# 3d-fracture-reassembly

./: .gitignore  .gitmodules  README.md
src/blender/: fracture_helper.py  open3d_resample.py
src/blender/2022_Scripts/: blender_auto_fracture_cluster.py  blender_auto_fracture_import.py  create_neighbor_LUT.py  open3d_resample.py
src/blender/addons/: shape_to_mesh.py
src/blender/fracture/: data_extractor.py  fracture_mesh.py
src/blender/job spawner/: blender_fracture_single.py  command_spawner.py
src/blender/visualize/: mesh_viz.py
src/dataset_generation/: README.md  open3d_resample.py  requirements.txt
src/dataset_generation/blender/: blender_fracture_folder.py
src/dataset_generation/surface_segmentation/: CMakeLists.txt  just_visualize.cpp  region_grow.cpp
src/dataset_generation/surface_segmentation/npy/233190_8_seed_0/: 233190_shard_0.npy  233190_shard_1.npy  233190_shard_2.npy  233190_shard_3.npy  233190_shard_4.npy  233190_shard_5.npy  233190_shard_6.npy  233190_shard_7.npy
src/model/: README.md
src/model/PointNet/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy  README.md  classical_method.py  complete_train.py  concat_feature.py  dataset.py  encode_descriptors.py  kp.py  (+17 more)
src/optimization/: assy_3d.m  assy_3d_ransac.m  check_R.m  comp_kp.m  distance_corr.m  get_descriptor_pairs.m  get_descriptor_pairs_classical.m  helmert_nd.m  import_3d.m  import_3d_classical.m  main_reassembly.m  plot_3d.m  plot_corr.m  plot_f_kp.m  plot_keypoints.m  readme.md  subplot_keypoints.m  triplewise_matching_3d.m  workspace_cube_6_result.mat
src/utils/: pcd_to_npy.py
(+1160 files in other folders)
